fixed overlapping by getting rid of flex-basis 80% for navLink it was unnecessary

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    border: 1px solid red;
+
 }
 
 /* HOME */
@@ -21,7 +21,6 @@ body{
 
     flex-basis: 100%;
     flex-wrap: wrap;
-
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -37,10 +36,10 @@ body{
 .navLink{
     /* border: 1px solid black; */
     display: flex;
-    flex-basis: 80%;
+
     height: 10vh;
     justify-content: flex-end;
-    justify-content: space-evenly;
+
     align-items: center;
     flex-wrap: wrap;
 
@@ -79,3 +78,15 @@ body{
 
 /* end of NAV */
 
+.aboutPage{
+    display: flex;
+    background-color: beige;
+    flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 800px) {
+    body {
+      background-color: lightblue;
+      flex-direction: column;
+    }
+  }
